...
                color = MaterialTheme.colorScheme.onSecondaryContainer
            )
        }

        ItemBox(modifier = Modifier.weight(floatArrangement[2])) {
            SetInputField(
                modifier = Modifier.testTag("Weight value")
                    .fillMaxHeight()
                    .width(width = 64.dp),
                value = weight,
                onValueChanged = { onInputFieldChanged(it, SetField.WEIGHT) },
                tag = "WeightInputField"
            )
        }

        ItemBox(modifier = Modifier.weight(floatArrangement[3])) {
            SetInputField(
                modifier = Modifier.testTag("Reps value")
                    .fillMaxHeight()
                    .width(width = 64.dp),
                value = reps,
                onValueChanged = { onInputFieldChanged(it, SetField.REPETITIONS) },
                tag = "RepsInputField"
            )
...
