package bg.zahov.app.data

enum class BodyPart {
    Core, Arms, Back, Chest, Legs, Shoulders, Other, Olympic,
}