...
    setSelected: (type: TypeSettings, selected: Any) -> Unit,
    modifier: Modifier = Modifier
) {
    Dialog(onDismissRequest = onDismissRequest ) {
        Card(
            modifier = modifier
                .testTag("RadioSettings")
                .fillMaxWidth()
                .padding(16.dp),
            shape = RoundedCornerShape(16.dp),
        ) {
            Text(
                text = type.name,
...
